# ozon_radar

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
packaging/: build-deb.sh
qml/: SettingsWindow.qml  main.qml
scripts/: README.md  element_finder.py  ozon_fetch.py  page_loader.py  product.py  product_parser.py  product_processor.py  requirements.txt  scroller.py  url_normalizer.py
src/: fetcheventparser.cpp  fetcheventparser.h  main.cpp  ozonradarscraper.cpp  ozonradarscraper.h  ozonscraper.cpp  ozonscraper.h  productcardparser.cpp  productcardparser.h  settingsservice.cpp  settingsservice.h  shortcutlayoutfix.cpp  shortcutlayoutfix.h
src/ozon_scraper/: batchproductmapper.cpp  batchproductmapper.h  fetcheventparser.cpp  fetcheventparser.h  ozonradarscraper.cpp  ozonradarscraper.h  pythonfetchprocessrunner.cpp  pythonfetchprocessrunner.h  urlinputparser.cpp  urlinputparser.h
